2005-04-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/paper-score.cc (process): run get_paper_systems() only once.

	* lily/line-interface.cc (make_arrow): new function. Patch by
	Jonatan Liljedahl <http://kymatica.com>
	(arrows): idem.

	* lily/line-spanner.cc (line_stencil): add arrows.
	

2005-04-18  Mathieu Giraud  <magiraud@free.fr>

	* input/test/chord-names-german.ly: update for italian/french chords
	
	* Documentation/user/instrument-notation.itely (Printing chord names): update

2005-04-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/paper-score.hh (class Paper_score): remove unused prototypes.

	* lily/book.cc (process): add -COUNT to midi output.

	* lily/score.cc (book_rendering): remove outname argument
	(book_rendering): return list of Music_outputs. 

	* lily/global-context-scheme.cc (LY_DEFINE): remove outname argument.

	* lily/book.cc (process): loop over Music_outputs returned from Score::book_rendering().

	* lily/*.cc (width_callback): remove spurious "unused" warnings
	for assert (axis==[XY]_AXIS); 

	* lily/include/music-output.hh (class Music_output): smobify class.

	* lily/include/paper-score.hh (class Paper_score): make members private.

	* lily/performance.cc (process): return #f iso. #<undefined>. This
	prevents #<undefined> leaking into GUILE-userspace.

2005-04-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* config.hh.in: remove HAVE_PANGO_FC_FONT_MAP_ADD_DECODER_FIND_FUNC

2005-04-17  Mathieu Giraud  <magiraud@free.fr>

	* scm/chord-name.scm : support for italian and french
	chords names.

	* scm/chord-ignatzek-names.scm (ignatzek-chord-names): add
	a space defined by chordPrefixSpacer when the root name is
	direclty followed by a prefix.

	* ly/engraver-init.ly : chordPrefixSpacer	
	* scm/define-context-properties.scm : chordPrefixSpacer
	* ly/property-init.ly : italianChords, frenchChords 

2005-04-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/feta-din.mf: Remove.

	* mf/GNUmakefile (fontdir): Bugfix.
