@@ -109,7 +109,7 @@ Paper_score::layout () const
   
 
 SCM
-Paper_score::get_systems () const
+Paper_score::get_paper_systems () const
 {
   return paper_systems_;
 }
